@@ -19,6 +19,7 @@ depth: 1
  * Move `SnippetViewSet` menu registration mechanism to base `ViewSet` class (Sage Abdullah)
  * Enable reference index tracking for models registered with `ModelViewSet` (Sage Abdullah)
  * When copying a page or creating an alias, copy its view restrictions to the destination (Sandeep Choudhary, Suyash Singh)
+ * Support pickling of StreamField values (pySilver)
 
 ### Bug fixes
 
